--- a/stylesheet.css
+++ b/stylesheet.css
@@ -151,8 +151,9 @@ body  {
     background-color:white;
     color:black;
     border-radius: 5px;
-    padding: 200px 50px;
+    padding: 200px 20px;
     font-size: 200%;
+    margin-right: 500px;
   }
 
   .box2 { 
