--- a/stylesheet.css
+++ b/stylesheet.css
@@ -150,10 +150,11 @@ body  {
     text-align: center;
     background-color:white;
     color:black;
+    width: 700px;
     border-radius: 5px;
-    padding: 200px 20px;
+    padding: 200px ;
     font-size: 200%;
-    margin-right: 500px;
+    margin: 50px;
   }
 
   .box2 { 
