--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,9 +4,14 @@
     background-image: url(watertruck.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    box-shadow: 0px 0px 30px 0px;
-    margin-bottom: 100px;
-    margin-top: 0cm;
+    box-shadow: 0px 0px 0px 0px;
+    margin-bottom: 10px;
+    margin-top: 0;
+}
+
+body{
+    margin: 0;
+    padding: 0;
 }
 
 a {
