--- a/stylesheet.css
+++ b/stylesheet.css
@@ -156,7 +156,7 @@ body  {
     text-align: center;
     background-color:white;
     color:black;
-    width: 200px;
+    width: 100%;
     border-radius: 5px;
     padding: 200px ;
     font-size: 200%;
