--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,15 +4,15 @@
     background-image: url(watertruck.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    box-shadow: 0px 0px 0px 0px;
     margin-bottom: 10px;
-    margin-top: 0;
-    width: 105%;
+    width: 100%;
 }
 
 body{
     margin: 0;
     padding: 0;
+    color: white;
+    background-color: rgb(14, 14, 66);
 }
 
 a {
@@ -20,29 +20,41 @@ a {
 }
 
 nav ul{
+    justify-content: left;
     list-style: none;
 }
 
-nav li {
+nav h1{
+    font-size: 40px;
+    margin-right: 950px;
+}
+
+nav a{
     color: yellow;
+}
+
+nav li {
     display: inline-block;
     padding: 5px;
 }
 
 nav {
-    background: rgb(14, 14, 66);
+    display: flex;
+    padding: 20px;
+    background: rgba(255, 255, 255, 0.514);
     text-align: right;
+    
 }
 
 .welcome {
     text-align: center;
-    margin-bottom: 50px;
-    font-size: 50px;
+    margin:100px 50px;
+    font-size: 40px;
 }
 
 .paragraph {
     text-shadow: 5px 5px 3px 10px;
-    padding: 100px 50px 20px 30px;
+    padding: 10px 50px 20px 30px;
     font-size: 150px;
 }
 
@@ -61,11 +73,6 @@ nav {
 .water1 {
     font-size: 20px;
     margin-bottom: 200px;
-}
-
-body  {
-    color: white;
-    background-color: rgb(14, 14, 66);
 }
 
 .features {
@@ -143,24 +150,17 @@ body  {
     animation-timing-function: forward;
 }
 
-.wrapper {
-    display: grid;
-    grid-gap: 10px;
-    grid-template-columns: repeat(5, [col] 50% ) ;
-    grid-template-rows: repeat(3, [row] auto  );
-    background-color:rgb(14, 14, 66);
-    color: #444;
-  }
+
 
   .Box {
     text-align: center;
     background-color:white;
     color:black;
-    width: 100%;
+    width: 10%;
     border-radius: 5px;
     padding: 200px ;
     font-size: 200%;
-    margin: 50px;
+    margin: 10px;
   }
 
   .box2 { 
@@ -169,7 +169,7 @@ body  {
     border-radius: 10px;
     padding: 10px 50px 0px 10px;  
     height: 100px;
-    width: 500px;
+    width: 50%;
     background:greenyellow;
     margin-bottom: 200px;
     margin-top: 50px;
