--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,8 +49,9 @@ nav {
 
 .welcome {
     text-align: center;
-    margin:100px 50px;
-    font-size: 40px;
+    margin:100px;
+    font-size: 30px;
+    padding: 10px;
 }
 
 .paragraph {
