--- a/stylesheet.css
+++ b/stylesheet.css
@@ -204,25 +204,24 @@ nav {
       font-size: 100px
       }
 
-      nav h1{
-        margin-right: 125px;
-    }
-
     nav li {
         background-color: rgba(255, 255, 255, 0.514);
         padding: 5px;
         border: 1px solid gray;
-        flex-direction: column;
     }
 
     nav ul{
+        margin-top: 50px;
         list-style: none;
-        flex-direction: column;
+    }
+
+    nav h1{
+        font-size: 40px;
+        margin-right: 1%;
     }
 
     nav {
         background: rgb(109, 109, 139);
-        text-align: right;
     }
 
     .img1 {
